--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,8 @@ widgets:
 - recent_posts
 - tagcloud
 - category
-- twitter
 
-excerpt_link: Read More
+excerpt_link: 阅读全文
 
 twitter:
   username: meinaozi
@@ -29,7 +28,7 @@ fancybox: true
 google_analytics: UA-39023568-1
 rss: /atom.xml
 
-comment_provider: facebook
+comment_provider: 
 # Facebook comment
 facebook:
   appid: 123456789012345
