--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ addthis:
 
 fancybox: true
 
+baidu_analytics: 519f6bcea13a06bb44fb9fd6f4d1d540
+
 google_analytics: UA-39023568-1
 rss: /atom.xml
 
