--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ baidu_analytics: 519f6bcea13a06bb44fb9fd6f4d1d540
 google_analytics: UA-39023568-1
 rss: /atom.xml
 
-comment_provider: 
+comment_provider: disqus
 # Facebook comment
 facebook:
   appid: 123456789012345
